<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill">Bill</string>
    <string name="tip2">Tip%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="eu">€</string>
    <string name="diners">Diners</string>
    <string name="per_diner">Per Diner</string>
    <string name="rounded">Rounded</string>
    <string name="reset">Reset</string>
    <string name="cero">0.00</string>
    <string name="tipInicial">10.00</string>
</resources>
